@@ -1,5 +1,7 @@
 2011-09-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-art.el (gnus-treat-hide-citation): Add doc.
+
 	* message.el (message-default-send-rename-function): Break out into its
 	own function.
 
